--- a/StreamTweetSwift/StreamTweetSwift/Base.lproj/Main.storyboard
+++ b/StreamTweetSwift/StreamTweetSwift/Base.lproj/Main.storyboard
@@ -33,13 +33,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="146" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G2v-y0-OCV">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="146" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G2v-y0-OCV">
+                                <rect key="frame" x="16" y="0.0" width="568" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" showsCancelButton="YES" id="ldH-gy-HUb">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="ldH-gy-HUb">
+                                    <rect key="frame" x="0.0" y="64" width="568" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <scopeButtonTitles>
+                                        <string>Search</string>
+                                    </scopeButtonTitles>
                                     <connections>
                                         <outlet property="delegate" destination="chl-PH-ucf" id="5Ok-RK-3us"/>
                                     </connections>
@@ -52,35 +55,30 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWd-Np-933">
-                                                    <rect key="frame" x="38" y="100" width="500" height="23"/>
+                                                    <rect key="frame" x="31" y="100" width="514" height="23"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23" id="pca-EP-EHm"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="italicSystem" pointSize="19"/>
                                                     <color key="textColor" red="0.2838459176" green="0.64361897069999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Twitter" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SVo-fq-egW">
-                                                    <rect key="frame" x="8" y="8" width="568" height="90"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="90" id="asI-fe-3Qy"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="8" y="8" width="532" height="90"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="SVo-fq-egW" firstAttribute="top" secondItem="zbV-Qr-4ri" secondAttribute="topMargin" id="0UQ-xp-osF"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="uWd-Np-933" secondAttribute="trailing" constant="54" id="0eM-bo-IWr"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="SVo-fq-egW" secondAttribute="trailing" constant="16" id="2N2-IM-ZUK"/>
-                                                <constraint firstItem="SVo-fq-egW" firstAttribute="leading" secondItem="zbV-Qr-4ri" secondAttribute="leadingMargin" id="3kl-t8-kDw"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="uWd-Np-933" secondAttribute="bottom" constant="14.5" id="BBc-iT-qCk"/>
-                                                <constraint firstItem="uWd-Np-933" firstAttribute="top" secondItem="SVo-fq-egW" secondAttribute="bottom" constant="2" id="a6w-VC-8As"/>
-                                                <constraint firstItem="uWd-Np-933" firstAttribute="leading" secondItem="zbV-Qr-4ri" secondAttribute="leadingMargin" constant="30" id="h74-lM-jES"/>
+                                                <constraint firstItem="uWd-Np-933" firstAttribute="top" secondItem="SVo-fq-egW" secondAttribute="bottom" constant="2" id="6Pd-LH-3hP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="SVo-fq-egW" secondAttribute="trailing" constant="20" id="ApY-xR-raB"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="uWd-Np-933" secondAttribute="trailing" constant="15" id="K1h-aF-38C"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="uWd-Np-933" secondAttribute="bottom" constant="14.5" id="KMp-tq-vu7"/>
+                                                <constraint firstItem="SVo-fq-egW" firstAttribute="top" secondItem="zbV-Qr-4ri" secondAttribute="topMargin" id="TRy-ov-D4J"/>
+                                                <constraint firstItem="uWd-Np-933" firstAttribute="leading" secondItem="zbV-Qr-4ri" secondAttribute="leadingMargin" constant="23" id="qXv-sy-7va"/>
+                                                <constraint firstItem="SVo-fq-egW" firstAttribute="leading" secondItem="zbV-Qr-4ri" secondAttribute="leadingMargin" id="wjF-5k-axA"/>
                                             </constraints>
-                                            <variation key="heightClass=regular">
-                                                <mask key="constraints">
-                                                    <exclude reference="BBc-iT-qCk"/>
-                                                </mask>
-                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="nameLabel" destination="uWd-Np-933" id="Dnj-l1-9jC"/>
@@ -99,7 +97,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="G2v-y0-OCV" secondAttribute="trailing" id="53q-k0-ShN"/>
+                            <constraint firstItem="aBu-rj-yy2" firstAttribute="top" secondItem="G2v-y0-OCV" secondAttribute="bottom" id="I6c-aN-Y8Z"/>
                             <constraint firstAttribute="centerX" secondItem="tR7-EU-qRj" secondAttribute="centerX" id="Xln-7u-6Yn"/>
+                            <constraint firstItem="G2v-y0-OCV" firstAttribute="top" secondItem="6JT-m0-hdS" secondAttribute="topMargin" id="eew-WM-yCG"/>
+                            <constraint firstItem="G2v-y0-OCV" firstAttribute="leading" secondItem="6JT-m0-hdS" secondAttribute="leadingMargin" id="kvl-S4-REP"/>
                             <constraint firstAttribute="centerY" secondItem="tR7-EU-qRj" secondAttribute="centerY" id="u5z-Ps-7ZV"/>
                         </constraints>
                     </view>
